src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Date_of_First_Sales_Visit__c</fullName>
        <description>This field is populated by the Date_of_First_Sales_Visit Lookup Rollup Summary. It shows the date of the first Sales Visit that was scheduled for this Opportunity.</description>
        <inlineHelpText>This field is populated by the Date_of_First_Sales_Visit Lookup Rollup Summary. It shows the date of the first Sales Visit that was scheduled for this Opportunity.</inlineHelpText>
        <label>Date of First Sales Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Activity_Overall__c</fullName>
        <description>Pulled from the Account&apos;s field, which is looking at Activities on the Account, Child Opportunities, and Child Contacts</description>
        <formula>Account.Date_of_Most_Recent_Activity_Overall__c</formula>
        <inlineHelpText>Pulled from the Account&apos;s field, which is looking at Activities on the Account, Child Opportunities, and Child Contacts</inlineHelpText>
        <label>Date of Most Recent Activity Overall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Activity__c</fullName>
        <description>Formula showing the Date of Most Recent Event or Date of Most Recent Task that is closest to today</description>
        <formula>IF( ISBLANK(Date_of_Most_Recent_Event__c) &amp;&amp; ISBLANK(Date_of_Most_Recent_Task__c),
   NULL,

/*ELSE*/
   TODAY() -
      MIN(
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Event__c,365242199), /* 1-million years is placeholder if date is blank so that MIN function... */
         BLANKVALUE(TODAY() - Date_of_Most_Recent_Task__c,365242199) /* ... can still calculate the minimum of the populated date fields */
      )
)</formula>
        <inlineHelpText>Formula showing the Date of Most Recent Event or Date of Most Recent Task that is closest to today</inlineHelpText>
        <label>Date of Most Recent Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Event__c</fullName>
        <description>Rollup showing the Max date (before today) of event records related to this record. This field is populated by the &quot;Opp Date of Most Recent Event&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Max date (before today) of event records related to this record</inlineHelpText>
        <label>Date of Most Recent Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Task__c</fullName>
        <description>Rollup showing the Max date (before today) of task records related to this record. This field is populated by the &quot;Opp Date of Most Recent Task&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Max date (before today) of task records related to this record</inlineHelpText>
        <label>Date of Most Recent Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Activity_Overall__c</fullName>
        <description>Pulled from the Account&apos;s field, which is looking at Activities on the Account, Child Opportunities, and Child Contacts</description>
        <formula>Account.Date_of_Next_Activity_Overall__c</formula>
        <inlineHelpText>Pulled from the Account&apos;s field, which is looking at Activities on the Account, Child Opportunities, and Child Contacts</inlineHelpText>
        <label>Date of Next Activity Overall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Activity__c</fullName>
        <description>Formula showing the Date of Next Event or Date of Next Task that is closest to today</description>
        <formula>IF( ISBLANK(Date_of_Next_Event__c) &amp;&amp; ISBLANK(Date_of_Next_Task__c),
   NULL,

/*ELSE*/
   TODAY() +
      MIN(
         BLANKVALUE(Date_of_Next_Event__c - TODAY(),365242199), /* 1-million years is placeholder if date is blank so that MIN function... */
         BLANKVALUE(Date_of_Next_Task__c - TODAY(),365242199) /* ... can still calculate the minimum of the populated date fields */
      )
)</formula>
        <inlineHelpText>Formula showing the Date of Next Event or Date of Next Task that is closest to today</inlineHelpText>
        <label>Date of Next Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Event__c</fullName>
        <description>Rollup showing the Min date (after today) of event records related to this record. This field is populated by the &quot;Opp Date of Next Event&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Min date (after today) of event records related to this record</inlineHelpText>
        <label>Date of Next Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Next_Task__c</fullName>
        <description>Rollup showing the Min date (after today) of task records related to this record. This field is populated by the &quot;Opp Date of Next Task&quot; Lookup Rollup Summary.</description>
        <inlineHelpText>Rollup showing the Min date (after today) of task records related to this record</inlineHelpText>
        <label>Date of Next Task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Opp_Created_to_First_Sales_Visit__c</fullName>
        <description>The number of days between the creation date of the opportunity and the first sales visit</description>
        <formula>IF(ISBLANK(Date_of_First_Sales_Visit__c),
   NULL,
/*ELSE*/
   Date_of_First_Sales_Visit__c - DATEVALUE(CreatedDate)
)</formula>
        <inlineHelpText>The number of days between the creation date of the opportunity and the first sales visit</inlineHelpText>
        <label>Days - Opp Created to First Sales Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DesignRevJacob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DesignRevJacob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dials_on_Account__c</fullName>
        <description>Number of times the Account has been called. This uses an InsideSales.com field, which counts the number of times IS.com is used to make a call to a record.</description>
        <formula>Account.qbdialer__Dials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of times the Account has been called. This uses an InsideSales.com field, which counts the number of times IS.com is used to make a call to a record.</inlineHelpText>
        <label>Dials on Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_Spouse_Attend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did Spouse Attend?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eagle_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eagle View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Panel_Amperage__c</fullName>
        <label>Electrical Panel Amperage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EoY10_guar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EoY10 guar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Credit_Score__c</fullName>
        <description>Customer&apos;s Best Guess At Their Credit Score (300-850)</description>
        <inlineHelpText>Customer&apos;s Best Guess At Their Credit Score (300-850)</inlineHelpText>
        <label>Estimated Credit Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Power_Use__c</fullName>
        <description>What is the customer&apos;s estimated power use?</description>
        <inlineHelpText>What is the customer&apos;s estimated power use?</inlineHelpText>
        <label>Estimated Power Use</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;25kWh/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-25 kWh/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 kWh/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;5kWh/yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$1000/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500-1000/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$200-500/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100-$200/month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;$100/month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Site_Quality__c</fullName>
        <description>What is the customer&apos;s estimated site quality?</description>
        <inlineHelpText>What is the customer&apos;s estimated site quality?</inlineHelpText>
        <label>Estimated Site Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Ideal/South-No shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very good/Not south-No Shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair / Some shade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor/Definite Shade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_System_Size__c</fullName>
        <description>What is the estimated system size?</description>
        <inlineHelpText>What is the estimated system size?</inlineHelpText>
        <label>Estimated System Size</label>
        <picklist>
            <picklistValues>
                <fullName>&gt;20 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-20 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;4 kW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FactChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if already handed off</description>
        <label>FactChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Survey_Pre_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Survey (Pre-Sale)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_Option__c</fullName>
        <description>What Type of Financing Did This Customer Choose?</description>
        <inlineHelpText>What Type of Financing Did This Customer Choose?</inlineHelpText>
        <label>Financing Option</label>
        <picklist>
            <controllingField>Financing_Type__c</controllingField>
            <picklistValues>
                <fullName>No Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enerbank - SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hudson 20 Year Term Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hudson 12 Month Short Term Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hudson 18 Month Short Term Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial CPACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Smart E Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSERDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSERDA + Enerbank SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Financed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ygrene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sungage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalFirst</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <description>Will the Customer Purchase or Lease This System?</description>
        <inlineHelpText>Will the Customer Purchase or Lease This System?</inlineHelpText>
        <label>Purchase/Lease</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <description>Does the customer need financing?</description>
        <inlineHelpText>Does the customer need financing?</inlineHelpText>
        <label>Financing</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Need/No Mention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>Google Click Id</description>
        <inlineHelpText>Google Click Id</inlineHelpText>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Going_Solar_Reason__c</fullName>
        <description>What is the customer&apos;s reason for going solar?</description>
        <inlineHelpText>What is the customer&apos;s reason for going solar?</inlineHelpText>
        <label>Going Solar Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Financial ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Independence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control/Reduce Utility Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Value Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green/Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stick it to the Man</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ground_Mount_Interest__c</fullName>
        <description>Is the customer interested in a ground mount installation?</description>
        <inlineHelpText>Is the customer interested in a ground mount installation?</inlineHelpText>
        <label>Ground Mount Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Interested_in_Solar__c</fullName>
        <label>How Interested in Solar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>How_important_is_the_other_Spouse__c</fullName>
        <label>How important is the other Spouse</label>
        <picklist>
            <picklistValues>
                <fullName>Very</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indifferent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opposed to Going Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Sales_Order_Close_Date__c</fullName>
        <description>Close Date from original Sales order</description>
        <inlineHelpText>Close Date from original Sales order</inlineHelpText>
        <label>Initial Sales Order Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Reported_Utility__c</fullName>
        <description>Utility Company Reported by Inside Sales</description>
        <inlineHelpText>Utility Company Reported by Inside Sales</inlineHelpText>
        <label>Inside Sales Reported Utility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Level__c</fullName>
        <description>What is the customer&apos;s interest level?</description>
        <inlineHelpText>What is the customer&apos;s interest level?</inlineHelpText>
        <label>Interest Level</label>
        <picklist>
            <picklistValues>
                <fullName>Ready to Buy Right Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wants to Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Starting to Look</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Sales_Notes__c</fullName>
        <description>Internal Sales Notes</description>
        <label>Internal Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KaW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KaW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Call_Time_on_Account__c</fullName>
        <description>Pulled from the Account&apos;s field, which is a timestamp of when the last call was made on the Account using the IS.com Power Dialer</description>
        <formula>Account.qbdialer__LastCallTime__c</formula>
        <inlineHelpText>Pulled from the Account&apos;s field, which is a timestamp of when the last call was made on the Account using the IS.com Power Dialer</inlineHelpText>
        <label>Last Call Time on Account</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <description>Lead Created Date</description>
        <inlineHelpText>Lead Created Date</inlineHelpText>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Date__c</fullName>
        <label>Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_1__c</fullName>
        <description>Lead Source Detail 1</description>
        <inlineHelpText>Lead Source Detail 1</inlineHelpText>
        <label>Lead Source Detail 1</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Hanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooler Planet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calfinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geostellar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Genesis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bright Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarWorld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1BOG Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvassing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Tabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directory/Listing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_2__c</fullName>
        <description>Lead Source Detail 2</description>
        <inlineHelpText>Lead Source Detail 2</inlineHelpText>
        <label>Lead Source Detail 2</label>
        <picklist>
            <picklistValues>
                <fullName>Ari Silver-Isenstadt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article/Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer (Self)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directory/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donald Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jon Cardin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mt. Pleasant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rawat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rochelle Bartolomei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russ Prechtl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Self Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelley Cohen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_3__c</fullName>
        <description>Lead Source Detail 3</description>
        <inlineHelpText>Lead Source Detail 3</inlineHelpText>
        <label>Lead Source Detail 3</label>
        <picklist>
            <controllingField>Lead_Source_Detail_2__c</controllingField>
            <picklistValues>
                <fullName>1BOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albany Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annapolis Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bethesda Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGEHOME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branford Village</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightCurrent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalFinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Region Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NJ Super Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NY Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central OH Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chesapeake Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CleanEnergyExperts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CleanEnergyQuotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Great Big Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooler Planet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cranberry Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>